fix(boss): resolve boss spawn timing inconsistencies with pause-aware calculations
- Updated boss spawning logic to utilize pause-aware timing, ensuring accurate generation intervals that exclude paused gameplay.
- Replaced direct time comparison with a method that calculates elapsed time considering pauses, enhancing gameplay balance.
- Added 18 specialized tests to verify boss spawn timing under various pause scenarios, ensuring regression prevention and consistent behavior.
- Increased overall test coverage from 310 to 350+ tests, reflecting the comprehensive testing efforts for the boss spawn timing system.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,15 +4,15 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "thunder-fighter"
-version = "0.2.0"
+version = "0.8.0"
 description = "A classic vertical scrolling space shooter game built with Pygame"
 readme = "README.md"
 license = {text = "GPL-2.0"}  # Consider changing to MIT or Apache-2.0
 authors = [
-    {name = "Mike", email = "mike861@example.com"},
+    {name = "Mike", email = "mike861.only@gmail.com"},
 ]
 maintainers = [
-    {name = "Mike", email = "mike861@example.com"},
+    {name = "Mike", email = "mike861.only@gmail.com"},
 ]
 keywords = ["game", "pygame", "shooter", "arcade", "space"]
 classifiers = [
