--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11', '3.12']
+        os: [windows-latest, macos-latest]
+        #os: [ubuntu-latest, windows-latest, macos-latest]
+        #python-version: ['3.7', '3.8', '3.9', '3.10', '3.11', '3.12']
+        python-version: ['3.11', '3.12']
         exclude:
           # Python 3.7 is not available on newer macOS runners
           - os: macos-latest
